--- a/lang/ar.json
+++ b/lang/ar.json
@@ -365,21 +365,21 @@
     "Fighting": "Fighting",
     "Muay Thai fighter and": "Muay Thai fighter and",
     "coach Andrei Kulebin": "coach Andrei Kulebin",
-    "RoboForex Ltd is the official sponsor of a successful Belarusian Muay Thai fighter and coach Andrei Kulebin. Kulebin has more than 200 wins; he is a many-time Thai boxing world champion and an Honored Master of Sports of Belarus.": "RoboForex Ltd is the official sponsor of a successful Belarusian Muay Thai fighter and coach Andrei Kulebin. Kulebin has more than 200 wins; he is a many-time Thai boxing world champion and an Honored Master of Sports of Belarus.",
+    "TradeLive AI is the official sponsor of a successful Belarusian Muay Thai fighter and coach Andrei Kulebin. Kulebin has more than 200 wins; he is a many-time Thai boxing world champion and an Honored Master of Sports of Belarus.": "TradeLive AI is the official sponsor of a successful Belarusian Muay Thai fighter and coach Andrei Kulebin. Kulebin has more than 200 wins; he is a many-time Thai boxing world champion and an Honored Master of Sports of Belarus.",
     "World champion": "World championWorld champion",
     "Europe champion": "Europe champion",
     "Awards": "Awards",
     "text03": "Awards Awards Awards Awards Awards Awards Awards Awards Awards Awards Awards Awards Awards Awards Awards ",
     "AWARDS": "AWARDS",
     "OUR AWARDS": "OUR AWARDS",
-    "These aren’t ours, these are everyone’s that have supported easyMarkets since 2001. The reason we have been able to achieve anything is due to the people that joined us in this journey as employees, as clients and as partners.": "These aren’t ours, these are everyone’s that have supported easyMarkets since 2001. The reason we have been able to achieve anything is due to the people that joined us in this journey as employees, as clients and as partners.",
+    "These aren’t ours, these are everyone’s that have supported TradeLive AI since 2001. The reason we have been able to achieve anything is due to the people that joined us in this journey as employees, as clients and as partners.": "These aren’t ours, these are everyone’s that have supported TradeLive AI since 2001. The reason we have been able to achieve anything is due to the people that joined us in this journey as employees, as clients and as partners.",
     "The Best Crypto Highness": "The Best Crypto Highness",
     "Awarded by Financial Expo Egypt 2023": "Awarded by Financial Expo Egypt 2023",
     "Financial Expo Egypt": "Financial Expo Egypt",
     "Forex Services Awards": "Forex Services Awards",
     "Exhibitions": "Exhibitions",
     "text04": "Exhibitions Exhibitions Exhibitions Exhibitions Exhibitions Exhibitions Exhibitions Exhibitions Exhibitions Exhibitions Exhibitions ",
-    "Every year, RoboForex Ltd not only increases the number and improves the quality of its services, but also takes part in big field-specific events. RoboForex is a permanent participant of different international and Russian exhibitions dedicated to the Forex market-related services.": "Every year, RoboForex Ltd not only increases the number and improves the quality of its services, but also takes part in big field-specific events. RoboForex is a permanent participant of different international and Russian exhibitions dedicated to the Forex market-related services.",
+    "Every year, TradeLive AI not only increases the number and improves the quality of its services, but also takes part in big field-specific events. TradeLive AI is a permanent participant of different international and Russian exhibitions dedicated to the Forex market-related services.": "Every year, TradeLive AI not only increases the number and improves the quality of its services, but also takes part in big field-specific events. TradeLive AI is a permanent participant of different international and Russian exhibitions dedicated to the Forex market-related services.",
     "Past exhibitions of the Highness": "Past exhibitions of the Highness",
     "Hong Kong Convention": "Hong Kong Convention",
     "Hong Kong": "Hong Kong",
